Update Part 4 Section 2

--- a/app/src/main/res/layout/fragment_reservation_details_part3_f2.xml
+++ b/app/src/main/res/layout/fragment_reservation_details_part3_f2.xml
@@ -70,13 +70,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textStyle="bold"
+                android:textColor="@color/green"
+                android:textSize="18dp"
                 android:text="Location: "/>
 
             <TextView
@@ -84,7 +86,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
                 android:text="42nd Mile, Kea Farm, 39100, Malaysia"/>
 
         </LinearLayout>
@@ -100,85 +101,112 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="@color/green"
+                android:textSize="18dp"
                 android:text="Rating: "/>
 
             <TextView
                 android:id="@+id/textViewRatingDetailsP3F2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="28dp"
                 android:text="5"/>
 
             <ImageView
                 android:layout_width="30dp"
-                android:layout_height="20dp"
+                android:layout_height="25dp"
                 android:src="@drawable/star"/>
 
+
         </LinearLayout>
-        
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:text="Price: "/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="38dp"
+                android:layout_marginTop="1dp"
+                android:text="RM "/>
+
+            <TextView
+                android:id="@+id/textViewPriceDetailsP3F2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="100"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" /person"/>
+
+
+        </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Select Date: "/>
+                android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/bookingDateDetailsP3F2"
-                android:layout_width="200dp"
-                android:layout_height="48dp"
-                android:gravity="center"
-                android:hint="dd/mm/yy"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/green"
+                    android:textSize="18dp"
+                    android:text="Time Slot: "/>
 
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/bookingTimeSlotsP3F2"
+                    android:layout_width="150dp"
+                    android:layout_height="48dp"
+                    android:hint="9.00 AM - 11.00 AM"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:orientation="vertical">
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Select Time Slot: "/>
+                android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/bookingTimeSlotsP3F2"
-                android:layout_width="200dp"
-                android:layout_height="48dp"
-                android:gravity="center"
-                android:hint="9.00 AM - 11.00 AM"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/green"
+                    android:layout_marginStart="30dp"
+                    android:textSize="18dp"
+                    android:text="Number of Participants: "/>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Number of Participants: "/>
-
-            <EditText
-                android:id="@+id/bookingNumParticipantsP3F2"
-                android:layout_width="200dp"
-                android:layout_height="48dp"
-                android:gravity="center"
-                android:hint="1 - 30"/>
+                <EditText
+                    android:id="@+id/bookingNumParticipantsP3F2"
+                    android:layout_width="150dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="30dp"
+                    android:hint="1 - 30"/>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -186,6 +214,66 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/green"
+                android:textSize="18dp"
+                android:text="Select Date: "/>
+
+            <EditText
+                android:id="@+id/bookingDateDetailsP3F2"
+                android:layout_width="217dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="10dp"
+                android:hint="dd/mm/yy"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="@color/green"
+                android:text="Total Price: "/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:text="RM "
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/totalAmountDetailsP3F2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text=" - "
+                android:textSize="18dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -195,7 +283,8 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/green"
                 android:text="Back"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="10dp"
+                app:cornerRadius="0dp"/>
 
             <Button
                 android:id="@+id/submitButtonDetailsP3F2"
@@ -203,7 +292,8 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/green"
                 android:layout_marginStart="10dp"
-                android:text="Submit"/>
+                android:text="Submit"
+                app:cornerRadius="0dp"/>
 
         </LinearLayout>
 
