--- a/app/src/main/res/layout/subscription_item_part3f3.xml
+++ b/app/src/main/res/layout/subscription_item_part3f3.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imageSubscriptionItemP3F3"
             android:layout_width="170dp"
             android:layout_height="170dp"
             android:layout_margin="8dp"
@@ -28,12 +29,12 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/nameSubscriptionItemP3F3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:textColor="@color/green"
-                android:layout_gravity="center"
                 android:text="Carrot"/>
 
             <LinearLayout
@@ -48,9 +49,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="5dp"
                     android:textStyle="bold"
-                    android:text="Weekly Price:    RM"/>
+                    android:text="Weekly Price:      RM"/>
 
                 <TextView
+                    android:id="@+id/weeklyPriceSubscriptionItemP3F3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="5dp"
@@ -74,6 +76,7 @@
                     android:text="Monthly Price:    RM"/>
 
                 <TextView
+                    android:id="@+id/monthlyPriceSubscriptionItemP3F3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textStyle="bold"
@@ -82,13 +85,23 @@
 
             </LinearLayout>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/green"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
-                android:text="Select Plan"/>
+            <FrameLayout
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/green"
+                android:layout_marginStart="85dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="12dp"
+                    android:textColor="@color/white"
+                    android:text="Select Plan"/>
+
+            </FrameLayout>
 
         </LinearLayout>
 
